--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ chardet==4.0.0
 click==8.0.1
 discord-webhook==0.14.0
 Flask==2.0.1
+gitdb==4.0.7
+GitPython==3.1.18
 idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 Pillow==8.2.0
+python-git==2018.2.1
 requests==2.25.1
+Send2Trash==1.7.1
+smmap==4.0.0
 urllib3==1.26.6
 Werkzeug==2.0.1
